# jet

./: .env  .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  README.md  new_runtime_opt.ll
contrib/syntaxes/: llvm.sublime-syntax
crates/instructions/: Cargo.toml
crates/instructions/src/: lib.rs
crates/jet/: Cargo.toml
crates/jet/runtime-ir/: jet.ll  jet.s
crates/jet/src/: engine.rs  lib.rs
crates/jet/src/builder/: builder.rs  builtins.rs  contract.rs  env.rs  environment.rs  manager.rs  mod.rs  ops.rs
crates/jet/src/engine/: mod.rs
crates/jet/src/runtime/: ext.rs  mod.rs
crates/jet/tests/: test_roms.rs
crates/jet/tests/roms/: mod.rs
crates/jet_runtime/: Cargo.toml
crates/jet_runtime/src/: builtins.rs  exec.rs  functions.rs  lib.rs  module.rs  symbols.rs
crates/jet_runtime/src/binding/: mod.rs
crates/runtime/: cargo.toml
crates/runtime/src/: exec.rs  lib.rs
llvm-ir/: jetvm.ll
runtime/: Cargo.toml  libjetvm-runtime.ll  runtime.c
runtime-ir/: jet.ll
runtime/src/: consts.rs  functions.rs  lib.rs
src/: engine.rs  instructions.rs  lib.rs
src/builder/: contract.rs  contract_builder.rs  env.rs  environment.rs  errors.rs  manager.rs  mod.rs  ops.rs
src/engine/: mod.rs
src/instructions/: mod.rs
src/runtime/: exec.rs  functions.rs  mod.rs  returns.rs
src/runtime_binding/: mod.rs
tests/: roms.rs  test_roms.rs
tests/roms/: mod.rs
