cargo-features = ["edition2024"]

[workspace]
members = ["crates/*", "bin/*"]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
authors = ["Tyler Smith"]

[workspace.dependencies]
inkwell = { version = "0.4.0", features = ["llvm18-0"], git = "https://github.com/TheDan64/inkwell.git" }
