cargo-features = ["edition2024"]

[package]
name = "jet_runtime"
version = "0.1.0"
edition = "2024"

[profile.dev]
debug = false
opt-level = 3

[lib]
#crate-type = ["lib"]
crate-type = ["dylib"]
[dependencies]
sha3 = "0.11.0-pre.3"
log = "0.4.21"
hex = "0.4.3"
inkwell = { rev = "6c0fb56b3554e939f9ca61b465043d6a84fb7b95", features = ["llvm18-0", "llvm-sys-180"], git = "https://github.com/TheDan64/inkwell.git" }
