cargo-features = ["edition2024"]

[package]
name = "jet"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
log = "0.4"
inkwell = { version = "0.4.0", features = ["llvm18-0"], git = "https://github.com/TheDan64/inkwell.git" }
#jet_runtime = { path = "../../crates/jet_runtime" }
sha3 = "0.10.8"
